# omega

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  clipboard.rs  error.rs  events.rs  file_tree.rs  main.rs
src/ui/: edit_area.rs  file_tree.rs  mod.rs  path_input.rs  quick_access.rs
