[package]
name = "omega"
version = "0.4.3"
repository = "https://github.com/nwrenger/omega"
documentation = "https://github.com/nwrenger/omega"
readme = "README.md"
authors = ["nils@wrenger.net"]
description = "A performant terminal-based project editor with extensive shortcuts"
license = "MIT"
edition = "2021"
keywords = ["editor", "file", "project", "shortcuts", "tool"]
categories = ["command-line-utilities", "text-editors"]
rust-version = "1.67.1"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
arboard = "3.3.2"
cursive-syntect = "0.2.0"
cursive_tree_view = "0.9.0"
syntect = "5.2.0"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.11"
cursive = "0.21.1"

# # cursive dependency cross plattform
# [target.'cfg(target_os = "macos")'.dependencies.cursive]
# version = "0.21.1"

# [target.'cfg(not(target_os = "macos"))'.dependencies.cursive]
# version = "0.21.1"
# default-features = false
# features = ["crossterm-backend"]
