[package]
name = "omega"
version = "0.5.0"
repository = "https://github.com/nwrenger/omega"
documentation = "https://github.com/nwrenger/omega"
readme = "README.md"
authors = ["nils@wrenger.net"]
description = "A performant terminal-based project editor with extensive shortcuts"
license = "MIT"
edition = "2021"
keywords = ["editor", "file", "project", "shortcuts", "tool"]
categories = ["command-line-utilities", "text-editors"]
rust-version = "1.67.1"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
arboard = "3.4.1"
cursive = "0.21.1"
cursive-syntect = "0.2.0"
cursive_tree_view = "0.9.0"
ropey = "1.6.1"
syntect = "5.2.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
